[gd_scene load_steps=7 format=2]

[ext_resource path="res://nodes/components/BGCanvasRed.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/LeaderBoardsUI.gd" type="Script" id=2]
[ext_resource path="res://nodes/components/ReturnButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://resources/GameTheme.tres" type="Theme" id=4]
[ext_resource path="res://resources/ScrollBars.tres" type="Theme" id=5]
[ext_resource path="res://sprites/UI/Topbar/BG.png" type="Texture" id=6]

[node name="LeaderBoards" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 2 )

[node name="BGCanvasRed" parent="." instance=ExtResource( 1 )]

[node name="TopBG" type="TextureRect" parent="."]
self_modulate = Color( 1, 0.701961, 0.282353, 1 )
anchor_right = 1.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 96 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 32.0
margin_bottom = -96.0
theme = ExtResource( 5 )
custom_constants/separation = 16
alignment = 1

[node name="Control" type="Control" parent="HBoxContainer"]
margin_right = 56.0
margin_bottom = 615.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="NormalRuns" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 72.0
margin_right = 632.0
margin_bottom = 615.0
rect_min_size = Vector2( 512, 0 )
size_flags_horizontal = 3
custom_constants/separation = 23

[node name="Label" type="Label" parent="HBoxContainer/NormalRuns"]
margin_right = 560.0
margin_bottom = 41.0
text = "Normal Runs"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/NormalRuns"]
margin_top = 64.0
margin_right = 560.0
margin_bottom = 593.0
rect_min_size = Vector2( 0, 529 )
scroll_horizontal_enabled = false
__meta__ = {
"_editor_description_": ""
}

[node name="NormalRunContainer" type="VBoxContainer" parent="HBoxContainer/NormalRuns/ScrollContainer"]

[node name="HardRuns" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 648.0
margin_right = 1208.0
margin_bottom = 615.0
rect_min_size = Vector2( 512, 0 )
size_flags_horizontal = 3
custom_constants/separation = 23
__meta__ = {
"_editor_description_": ""
}

[node name="Label" type="Label" parent="HBoxContainer/HardRuns"]
margin_right = 560.0
margin_bottom = 41.0
text = "Hard Runs"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/HardRuns"]
margin_top = 64.0
margin_right = 560.0
margin_bottom = 615.0
rect_min_size = Vector2( 0, 551 )
scroll_horizontal_enabled = false

[node name="HardRunContainer" type="VBoxContainer" parent="HBoxContainer/HardRuns/ScrollContainer"]

[node name="Control2" type="Control" parent="HBoxContainer"]
margin_left = 1224.0
margin_right = 1280.0
margin_bottom = 615.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
__meta__ = {
"_editor_description_": ""
}

[node name="Return" parent="." instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 1.0
margin_left = 0.0
margin_right = 0.0
rect_min_size = Vector2( 1280, 96 )

[connection signal="pressed" from="Return/Button" to="." method="_on_Return_Button_pressed"]

[editable path="Return"]
